--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-.DS_Store
-node_modules
+# BACKEND GITIGNORE
 db/config.json
+
+node_modules
+.DS_Store
+.vscode
+
+# FRONTEND GITIGNORE
+# dependencies
+frontend/node_modules
+frontend/.pnp
+frontend/.pnp.js
+
+# testing
+frontend/coverage
+
+# production
+frontend/build
+
+# misc
+frontend/.DS_Store
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
