--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple web app that allows users to track their nutrient intake every day.",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "pg": "^8.5.1"
   },
